Update environment, Docker, and config for admin-service
Updated .env.example with new database and Cognito values. Improved Dockerfile to run migrations at startup and set NODE_ENV to production. Enhanced docker-compose.yml with healthchecks, network configuration, and service dependencies. Removed rootAdminPassword usage from config and README to reflect new bootstrap logic. Added admin-service4.zip to repository.

--- a/services/admin-service/Dockerfile
+++ b/services/admin-service/Dockerfile
@@ -1,8 +1,18 @@
 FROM node:20-alpine
+
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm ci --omit=dev
+
 COPY . .
+
+# Generate Prisma client
 RUN npx prisma generate
+
+# Use environment variables for DB and Cognito
+ENV NODE_ENV=production
 EXPOSE 8080
-CMD ["node", "src/server.js"]
+
+# Run DB migrations automatically at startup (safe for CI/CD)
+CMD npx prisma migrate deploy && node src/server.js
