--- a/services/admin-service/.env.example
+++ b/services/admin-service/.env.example
@@ -1,17 +1,17 @@
 # Rename to .env for local development
 NODE_ENV=development
 PORT=8080
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/adminservice?schema=public
+DATABASE_URL=postgres://postgres:postgres@postgres:5432/adminservice
 
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX=100
 CORS_ORIGIN=http://localhost:5173
 
 AWS_REGION=ap-southeast-1
-COGNITO_USER_POOL_ID=ap-southeast-1_XXXXXXXXX
-COGNITO_APP_CLIENT_ID=xxxxxxxxxxxxxxxxxxxxxx
-COGNITO_JWKS_URI=https://cognito-idp.ap-southeast-1.amazonaws.com/ap-southeast-1_XXXXXXXXX/.well-known/jwks.json
-COGNITO_ISSUER=https://cognito-idp.ap-southeast-1.amazonaws.com/ap-southeast-1_XXXXXXXXX
+COGNITO_USER_POOL_ID=ap-southeast-1_E9IGDPqhx
+COGNITO_APP_CLIENT_ID=6030qst0pnrrcamfs889hc4h7n
+COGNITO_JWKS_URI=https://cognito-idp.ap-southeast-1.amazonaws.com/ap-southeast-1_E9IGDPqhx/.well-known/jwks.json
+COGNITO_ISSUER=https://cognito-idp.ap-southeast-1.amazonaws.com/ap-southeast-1_E9IGDPqhx
 # root admin policy
 # This email identifies the *only* user allowed to create/update/delete/view admins.
 ROOT_ADMIN_EMAIL=admin@scrooge-bank.com
