--- a/services/admin-service/docker-compose.yml
+++ b/services/admin-service/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   postgres:
     image: postgres:16
@@ -10,17 +9,33 @@ services:
       POSTGRES_DB: adminservice
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      retries: 10
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      - scrooge-net
 
   admin-service:
     build: .
     container_name: admin-service
     restart: unless-stopped
-    env_file: .env
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
+    env_file: .env
+    environment:
+      DATABASE_URL: postgres://postgres:postgres@postgres:5432/adminservice
     ports:
       - "8080:8080"
+    networks:
+      - scrooge-net
+
 volumes:
   pgdata: {}
+
+networks:
+  scrooge-net:
+    driver: bridge
