--- a/services/admin-service/package.json
+++ b/services/admin-service/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "lint": "eslint .",
+    "format:check": "prettier --check .",
+    "security:audit": "npm audit --audit-level=moderate",
+    "build": "echo 'Build successful (handled by Docker)'",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init",
     "prisma:deploy": "prisma migrate deploy",
@@ -44,11 +47,15 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "eslint": "^9.9.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@eslint/js": "^9.38.0",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.4.0",
     "nodemon": "^3.1.4",
-    "prettier": "^3.3.3",
+    "prettier": "^3.6.2",
     "prisma": "^6.17.1"
   }
 }
