--- a/expresstest/docker-compose.yml
+++ b/expresstest/docker-compose.yml
@@ -1,22 +1,20 @@
-# version: "3.9"
-
-
-
 services:
   db:
     image: postgres:16
     container_name: agentdb
-    ports:
-      - "${PGPORT}:5432"
+    # ports:
+    #   - "${PGPORT}:5432"
     environment:
       POSTGRES_USER: ${PGUSER}
       POSTGRES_PASSWORD: ${PGPASSWORD}
       POSTGRES_DB: ${PGDB}
+    # env_file:
+    #   - ./agent-service/.env
     volumes:
       # persistent data volume
       - dbdata:/var/lib/postgresql/data
       # init scripts (run ONCE on fresh volume)
-      - ./docker/init:/docker-entrypoint-initdb.d:ro
+      - ./agent-service/docker/init:/docker-entrypoint-initdb.d:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${PGUSER} -d ${PGDB}"]
       interval: 5s
@@ -28,7 +26,7 @@ services:
       context: ./agent-service
       dockerfile: Dockerfile
     env_file:
-      - .env
+      - ./agent-service/.env
     container_name: agent-service
     ports:
       - "3000:3000"
