--- a/services/admin-service/.gitlab-ci.yml
+++ b/services/admin-service/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
   - deploy
 
 variables:
-  IMAGE_NAME: "$CI_REGISTRY_IMAGE"
+  IMAGE_NAME: '$CI_REGISTRY_IMAGE'
 
 # --------------------------------
 # Static Code Analysis (Lint + Format)
@@ -66,7 +66,7 @@ build-image:
 deploy-prod:
   stage: deploy
   image: alpine:3.19
-  needs: ["build-image"]
+  needs: ['build-image']
   when: manual
   script:
     - echo "Deploy would happen here (EC2, ECS, etc.)"
