--- a/services/admin-service/docker-compose.yml
+++ b/services/admin-service/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: adminservice
     ports:
-      - "5432:5432"
+      - '5432:5432'
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 5s
       retries: 10
     volumes:
@@ -29,7 +29,7 @@ services:
     environment:
       DATABASE_URL: postgres://postgres:postgres@postgres:5432/adminservice
     ports:
-      - "8080:8080"
+      - '8080:8080'
     networks:
       - scrooge-net
 
